# rawsys-linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.ko.md  README.md  build.rs
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/: args.rs  lib.rs  macros.rs  map.rs  set.rs
src/arch/: macros.rs
src/arch/aarch64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/arm/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/loongarch64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/mips/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/mips64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/powerpc/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/powerpc64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/riscv32/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/riscv64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/s390x/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/sparc/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/sparc64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/x86/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/arch/x86_64/: mod.rs  v5_10.rs  v5_15.rs  v5_4.rs  v6_1.rs  v6_10.rs  v6_12.rs  v6_6.rs
src/errno/: last.rs  mod.rs
src/syscall/: aarch64.rs  arm.rs  arm_thumb.rs  loongarch64.rs  mips.rs  mips64.rs  mod.rs  powerpc.rs  powerpc64.rs  riscv32.rs  riscv64.rs  s390x.rs  x86.rs  x86_64.rs
syscalls-gen/: Cargo.toml  README.ko.md  README.md
syscalls-gen/src/: errors.rs  main.rs  tables.rs
tests/: test_enosys.rs  test_syscall.rs  test_sysno_new.rs
